@@ -1,5 +1,15 @@
 2003-08-14  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/e-cal-model.c (e_cal_model_create_component_with_defaults):
+	use the default client to call cal_comp_*_new_with_defaults, and
+	if no client is available, just create an empty icalcomponent.
+
+	* gui/e-cal-view.c (e_cal_view_init): create an empty model.
+
+	* gui/e-week-view.c (e_week_view_add_event): use the event's client.
+
+2003-08-14  Rodrigo Moya <rodrigo@ximian.com>
+
 	* gui/e-cal-model.[ch] (e_cal_model_free_component_data): new
 	function.
 
